--- a/.env.test
+++ b/.env.test
@@ -19,7 +19,7 @@ MAIL_FROM=example@mail.com
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
+AWS_REGION=us-east-1
 S3_BUCKET=
 
 TEST_CLIENT_ID=playground
@@ -37,5 +37,5 @@ FACEBOOK_APP_ACCESS_TOKEN=
 
 CLOUDFRONT_API_ENDPOINT=
 
-SEGMENT_WRITE_KEY=
+SEGMENT_WRITE_KEY="segment-key"
 SENTRY_DSN=
