--- a/.env.test
+++ b/.env.test
@@ -37,5 +37,5 @@ FACEBOOK_APP_ACCESS_TOKEN=
 
 CLOUDFRONT_API_ENDPOINT=
 
-SEGMENT_WRITE_KEY="segment-key"
+SEGMENT_WRITE_KEY="your-segment-key"
 SENTRY_DSN=
