--- a/package.json
+++ b/package.json
@@ -2,22 +2,18 @@
   "name": "sequelize-graphql-server-template",
   "version": "1.0.0",
   "scripts": {
-    "build": "yarn clean && yarn transpile",
     "start": "node -r dotenv/config build",
     "dev": "nodemon --exec babel-node -r dotenv/config src",
-    "test": "DOTENV_CONFIG_PATH=\"./.env.test\" jest -i --detectOpenHandles --forceExit",
+    "clean": "rimraf build",
+    "transpile": "babel src -d build --copy-files",
+    "build": "yarn clean && yarn transpile",
+    "test": "cross-env DOTENV_CONFIG_PATH=\"./.env.test\" jest -i --detectOpenHandles --forceExit",
     "createsu": "node -r dotenv/config build/scripts/createSuperUser",
     "createapp": "node -r dotenv/config build/scripts/createApplication",
     "listapp": "node -r dotenv/config build/scripts/listApplications",
-    "createsu:dev": "babel-node -r dotenv/config src/scripts/createSuperUser",
-    "createapp:dev": "babel-node -r dotenv/config src/scripts/createApplication",
-    "listapp:dev": "babel-node -r dotenv/config src/scripts/listApplications",
     "prepare": "husky install",
-    "createdb": "npx sequelize db:create",
+    "createdb:test": "cross-env NODE_ENV=test DOTENV_CONFIG_PATH=\"./.env.test\" sequelize db:create",
     "seed": "sequelize-cli db:seed:all",
-    "undo:seed": "sequelize-cli db:seed:undo:all",
-    "clean": "rimraf build",
-    "transpile": "babel src -d build --copy-files",
     "docker:build:dev": "docker build . --tag usmansbk/auth-server --target dev",
     "docker:build": "docker build . --tag usmansbk/auth-server:prod --target prod",
     "docker:start": "docker compose up",
