--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "clean": "rimraf build",
     "transpile": "babel src -d build --copy-files",
     "build": "yarn clean && yarn transpile",
-    "test": "cross-env DOTENV_CONFIG_PATH=\"./.env.test\" jest -i --detectOpenHandles --forceExit",
+    "test": "jest -i --detectOpenHandles --forceExit",
     "createsu": "node -r dotenv/config build/scripts/createSuperUser",
     "createapp": "node -r dotenv/config build/scripts/createApplication",
     "listapp": "node -r dotenv/config build/scripts/listApplications",
     "prepare": "husky install",
-    "createdb:test": "cross-env DOTENV_CONFIG_PATH=\"./.env.test\" sequelize db:create --env test",
+    "createdb:test": "sequelize db:create --env test",
     "seed": "sequelize-cli db:seed:all",
     "docker:build:dev": "docker build . --tag usmansbk/auth-server --target dev",
     "docker:build": "docker build . --tag usmansbk/auth-server:prod --target prod",
@@ -35,7 +35,6 @@
     "@babel/register": "^7.17.7",
     "babel-jest": "^28.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
