--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,14 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=user_pool
 DB_NAME_TEST=user_pool_test
-DB_HOST=localhost
+DB_HOST=db
 DB_DIALECT=postgres
 DB_PORT=5432
 DATABASE_URL=
 
 
 REDIS_PORT=6379
-REDIS_HOST=localhost
+REDIS_HOST=cache
 REDIS_URL=
 
 MAIL_FROM=example@mail.com
