--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_REGION=us-east-1
 S3_BUCKET=
 
-TEST_CLIENT_ID=playground
+TEST_CLIENT_ID=test
 
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
