--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "clean": "rimraf build",
     "transpile": "babel src -d build --copy-files",
     "build": "yarn clean && yarn transpile",
-    "test": "jest -i --detectOpenHandles --forceExit",
+    "test": "cross-env NODE_ENV=test jest -i --detectOpenHandles --forceExit",
     "createsu": "node -r dotenv/config build/scripts/createSuperUser",
     "createapp": "node -r dotenv/config build/scripts/createApplication",
     "listapp": "node -r dotenv/config build/scripts/listApplications",
     "prepare": "husky install",
     "createdb:test": "sequelize db:create --env test",
     "seed": "sequelize-cli db:seed:all",
-    "docker:build:dev": "docker build . --tag usmansbk/auth-server --target dev",
-    "docker:build": "docker build . --tag usmansbk/auth-server:prod --target prod",
+    "docker:build": "docker build . --tag usmansbk/auth-server --target dev",
+    "docker:build:prod": "docker build . --tag usmansbk/auth-server:prod --target prod",
     "docker:start": "docker compose up",
     "docker:push": "docker push usmansbk/auth-server",
     "docker:cli": "docker exec -it auth-server sh",
@@ -35,6 +35,7 @@
     "@babel/register": "^7.17.7",
     "babel-jest": "^28.1.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
