change google env vars

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,9 @@ TWILIO_PHONE_NUMBER=
 
 JWT_PRIVATE_KEY=certs/jwtRS256.key
 JWT_PUBLIC_KEY=certs/jwtRS256.key.pub
-GOOGLE_APPLICATION_CREDENTIALS=certs/google_client_secret.json
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
 FACEBOOK_APP_ID=
 FACEBOOK_APP_ACCESS_TOKEN=
