--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-      POSTGRES_DB: user-pool
+      POSTGRES_DB: user_pool
     ports:
       - 5432:5432
     volumes:
