add step description

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ jobs:
       - checkout
       - run: yarn install
       - run: mkdir certs
-      - run: ssh-keygen -t rsa -P "" -b 4096 -m PEM -f certs/jwtRS256.key
-      - run: ssh-keygen -e -m PEM -f certs/jwtRS256.key > certs/jwtRS256.key.pub
+      - run:
+          name: Generate JWT private key
+          command: ssh-keygen -t rsa -P "" -b 4096 -m PEM -f certs/jwtRS256.key
+      - run:
+          name: Generate JWT public key
+          command: ssh-keygen -e -m PEM -f certs/jwtRS256.key > certs/jwtRS256.key.pub
       - run: yarn test
