--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ workflows:
   build_test_deploy:
     jobs:
       - test
-      - build
+      - build:
           requires:
             - test
           filters:
