--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,16 @@ jobs:
       - run:
           name: Run tests
           command: yarn test
+          environment:
+            TEST_CLIENT_ID: test
+            DB_DIALECT: postgres
+            DB_USERNAME: postgres
+            DB_PASSWORD: postgres
+            DB_NAME_TEST: user_pool_test
+            DB_HOST: localhost 
+            DB_DIALECT: postgres
+            DB_PORT: 5432
+
       - setup_remote_docker:
           version: 20.10.14
           docker_layer_caching: true
