--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
             TEST_CLIENT_ID: test
             DB_USERNAME: postgres
             DB_PASSWORD: postgres
+            DB_NAME: user_pool_test
             DB_NAME_TEST: user_pool_test
             DB_HOST: localhost
             DB_DIALECT: postgres
