--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ jobs:
       - image: cimg/redis:6.2.6
       - image: cimg/postgres:14.0
         environment:
-          POSTGRES_USER: $DB_USERNAME
-          POSTGRES_PASSWORD: $DB_PASSWORD
-          POSTGRES_DB: $DB_NAME
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: user_pool_ci
     steps:
       - checkout
       - restore_cache:
@@ -33,7 +33,6 @@ jobs:
       - run:
           name: Generate JWT public key
           command: ssh-keygen -e -m PEM -f certs/jwtRS256.key > certs/jwtRS256.key.pub
-      - run: echo $APP_NAME
       - run:
           name: Run tests
           command: yarn test
