--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
 workflows:
   build:
     jobs:
-      - build_test_deploy
+      - build_test_deploy:
           filters:
             branches:
               only:
