--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,12 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
       - run:
+          name: Pull Environment variables
+          command: npx dotenv-vault@latest pull production
+      - run:
+          name: Copy .env file
+          command: cp .env.production ./.env
+      - run:
           name: Build docker image
           command: docker build -t $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BRANCH . --target prod
 workflows:
