--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
           command: npx dotenv-vault@latest pull production
       - run:
           name: Copy .env file
-          command: cp .env.production .env
+          command: ls -a
       - run:
           name: Build docker image
           command: docker build --target prod -t $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BRANCH .
