--- a/.dockerignore
+++ b/.dockerignore
@@ -5,18 +5,6 @@ Dockerfile*
 docker-compose.*
 LICENSE
 README.md
-.circleci
-.husky
-.git
-.vscode
-.gitignore
-.eslintcache
-.eslintignore
-.eslintrc.js
-.prettierignore
-.prettierrc.json
-.nvmrc
-.env.example
-.env.me
+!.env
 !.env.project
 !.env.vault
