--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,14 +39,11 @@ jobs:
           version: 20.10.14
           docker_layer_caching: true
       - run:
-          name: Pull Environment variables
+          name: Pull environment variables
           command: npx dotenv-vault@latest pull production
       - run:
-          name: Copy .env file
+          name: Create .env file
           command: cp .env.production .env
-      - run:
-          name: List files
-          command: ls -a
       - run:
           name: Build docker image
           command: docker build --target prod -t $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:$CIRCLE_BRANCH .
