--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "btoa": "^1.2.1",
+    "bunyan": "^1.8.15",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "dataloader": "^2.1.0",
@@ -86,7 +87,6 @@
     "inquirer": "^8.2.4",
     "ioredis": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "loglevel": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
