--- a/package.json
+++ b/package.json
@@ -86,7 +86,6 @@
     "i18next-http-middleware": "^3.2.1",
     "inquirer": "^8.2.4",
     "ioredis": "^5.1.0",
-    "jose": "^4.8.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -95,6 +94,7 @@
     "node-fetch": "2.6.7",
     "nodemailer": "^6.7.5",
     "numeral": "^2.0.6",
+    "pem-jwk": "^2.0.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
