--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ PORT=4000
 
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_NAME=user_pool
+DB_NAME=user_pool_example
 DB_HOST=db
 DB_DIALECT=postgres
 DB_PORT=5432
