--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "transpile": "babel src -d build --copy-files",
     "build": "yarn clean && yarn transpile",
     "test": "cross-env DOTENV_CONFIG_PATH=.env.test jest -i",
-    "createsu": "node -r dotenv/config build/scripts/createSuperUser",
-    "createapp": "node -r dotenv/config build/scripts/createApplication",
-    "listapp": "node -r dotenv/config build/scripts/listApplications",
+    "createsu": "node build/scripts/createSuperUser",
+    "createapp": "node build/scripts/createApplication",
+    "listapp": "node build/scripts/listApplications",
     "prepare": "husky install",
     "createdb:test": "docker compose run --rm api npx sequelize db:create --env test",
     "seed": "sequelize-cli db:seed:all",
