--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "auth-service",
   "version": "1.0.0",
   "scripts": {
-    "start": "node -r dotenv/config build",
-    "dev": "nodemon --exec babel-node -r dotenv/config src",
+    "start": "cross-env DOTENV_CONFIG_PATH=.env.production node build",
+    "dev": "nodemon --exec babel-node src",
     "clean": "rimraf build",
     "transpile": "babel src -d build --copy-files",
     "build": "yarn clean && yarn transpile",
