rename build dir

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "auth-service",
   "version": "1.0.0",
   "scripts": {
-    "start": "node build",
+    "start": "node dist",
     "dev": "nodemon --exec babel-node src",
-    "clean": "rimraf build",
-    "transpile": "babel src -d build --copy-files",
+    "clean": "rimraf dist",
+    "transpile": "babel src -d dist --copy-files",
     "build": "yarn clean && yarn transpile",
     "test": "cross-env DOTENV_CONFIG_PATH=.env.test jest -i",
-    "createsu": "node build/scripts/createRootUser",
-    "createapp": "node build/scripts/createApplication",
-    "listapp": "node build/scripts/listApplications",
+    "createsu": "node dist/scripts/createRootUser",
+    "createapp": "node dist/scripts/createApplication",
+    "listapp": "node dist/scripts/listApplications",
     "prepare": "husky install",
     "createdb:test": "cross-env DOTENV_CONFIG_PATH=.env.test sequelize db:create --env test",
     "seed": "sequelize-cli db:seed:all",
