--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,26 @@
-APP_NAME=auth-service
-HOST=http://localhost:4000
-CLIENT_HOST=http://localhost:3000
+APP_NAME="auth-service"
+HOST="http://localhost:4000"
+CLIENT_HOST="http://localhost:3000"
 PORT=4000
 
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_NAME=user_pool_example
-DB_HOST=db
-DB_DIALECT=postgres
+DB_USERNAME="postgres"
+DB_PASSWORD="postgres"
+DB_NAME="user_pool_example"
+DB_HOST="db"
+DB_DIALECT="postgres"
 DB_PORT=5432
 DATABASE_URL=
 
 REDIS_PORT=6379
-REDIS_HOST=cache
+REDIS_HOST="cache"
+REDIS_CLUSTER_MODE="disabled"
 REDIS_URL=
 
-MAIL_FROM=example@mail.com
+MAIL_FROM="example@mail.com"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
+AWS_REGION="us-east-1"
 S3_BUCKET=
 
 TEST_CLIENT_ID=test
