--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,6 @@ workflows:
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build-and-push-image
-          family: '${AWS_ECR_REPO}-service'
-          cluster-name: '${AWS_ECR_REPO}-cluster'
-          container-image-name-updates: 'container=${AWS_ECR_REPO}-service,tag=${CIRCLE_SHA1}
+          family: "${AWS_ECR_REPO}-service"
+          cluster-name: "${AWS_ECR_REPO}-cluster"
+          container-image-name-updates: "container=${AWS_ECR_REPO}-service,tag=${CIRCLE_SHA1}"
