--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,3 +75,7 @@ workflows:
           family: "${AWS_ECR_REPO}-service"
           cluster-name: "${AWS_ECR_REPO}-cluster"
           container-image-name-updates: "container=${AWS_ECR_REPO}-service,tag=${CIRCLE_SHA1}"
+          filters:
+            branches:
+              only:
+                - release
