--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ workflows:
               only:
                 - release
                 - staging
+                - develop
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build-and-push-image
