--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ MAIL_FROM="example@mail.com"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_REGION="us-east-1"
-S3_BUCKET=
+AWS_S3_BUCKET=
 
 TEST_CLIENT_ID=test
 
