--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
+NODE_ENV=
 APP_NAME="auth-service"
 HOST="http://localhost:4000"
-CLIENT_HOST="http://localhost:3000"
+DEFAULT_CLIENT_HOST=
 PORT=4000
 
 DB_USERNAME="postgres"
@@ -13,7 +14,6 @@ DATABASE_URL=
 
 REDIS_PORT=6379
 REDIS_HOST="cache"
-REDIS_CLUSTER_MODE="disabled"
 REDIS_URL=
 
 MAIL_FROM="example@mail.com"
