--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "docker:cli": "docker exec -it auth-service sh",
     "docker:build": "docker build -t usmansbk/auth-serivce .",
     "docker:build:prod": "docker build -t usmansbk/auth-serivce . -f Dockerfile.production",
-    "docker:test": "docker compose run --rm api yarn test"
+    "docker:test": "docker compose run --rm api yarn test",
+    "env": "sync-dotenv"
   },
   "description": "Sequelize GraphQL server template",
   "main": "index.js",
@@ -49,6 +50,7 @@
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "sequelize-cli": "^6.4.1",
+    "sync-dotenv": "^2.7.0",
     "weak-napi": "^2.0.2"
   },
   "dependencies": {
@@ -111,5 +113,10 @@
   },
   "nodemonConfig": {
     "ext": "js,gql,env,json"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn env"
+    }
   }
 }
